hvdc should throw specific runtime exception instead of null pointer in case of incomplete input data